changed spacing issues

--- a/web/static/css/styles.css
+++ b/web/static/css/styles.css
@@ -140,7 +140,7 @@ button:hover {
 
 .dashboard {
     text-align: center;
-    margin-top: 50px;
+    margin-top: 150px;
 }
 
 .dashboard h1 {
